--- a/app/styles/common/_background-image.scss
+++ b/app/styles/common/_background-image.scss
@@ -3,4 +3,5 @@
     background: url('../images/' + $name) no-repeat 50% 50%;
     width: image-width($name);
     height: image-height($name);
+    background-size: contain;
 }
