--- a/app/views/account/login.html
+++ b/app/views/account/login.html
@@ -1,27 +1,16 @@
-<div wd-header></div>
-<div class="wd-account-login">
-    <div class="wd-wrapper">
-        <div class="left">
-            <div class="banner"></div>
-        </div>
-        <div class="login-form">
-            <div class="item">
-                <p class="title">使用手机号码登录</p>
-            </div>
-            <div class="item">
-                <input type="text" wd-placeholder="手机号码" ng-model="a">
-            </div>
-            <div class="item">
-                <input type="password" wd-placeholder="登录密码" ng-model="b">
-            </div>
-            <div class="item">
-                <a class="btn login-btn">登录</a>
-                <a href="#/account-register" class="btn register-btn">注册</a>
-            </div>
-            <div class="item">
-                <a href="">忘记密码？</a>
-            </div>
+<div class="wd-account-login wd-body">
+    <div class="header">
+        <div class="logo"></div>
+    </div>
+    <div class="form">
+        <input type="text" placeholder="手机号码">
+        <input type="password" placeholder="登录密码">
+        <div class="btns">
+            <div class="btn login-btn">登录</div>
+            <a href="#/account-register" class="btn register-btn">注册</a>
         </div>
     </div>
+    <div class="footer">
+        <p>&copy;2014 Guoking.com.hk. All rights reserved.</p>
+    </div>
 </div>
-<div wd-footer></div>
