--- a/app/styles/account/_open.scss
+++ b/app/styles/account/_open.scss
@@ -1,13 +1,8 @@
 .wd-account-open {
-    position: relative;
     padding: 0px;
     .nav {
-        width: 230px;
-        border-right: 1px solid $standard-deep-gray;
+        width: 100%;
         height: 100%;
-        position: absolute;
-        top: 0px;
-        bottom: 0px;
         .nav-header {
             height: 40px;
             line-height: 40px;
@@ -19,67 +14,89 @@
             }
         }
         .nav-body {
-            margin-top: 20px;
             .item {
-                height: 60px;
-                line-height: 60px;
-                padding-left: 30px;
+                height: 50px;
+                line-height: 50px;
+                padding-left: 50px;
+                border-bottom: 1px solid $standard-deep-gray;
                 a, p {
+                    display: inline-block;
                     font-size: 16px;
+                }
+                .active {
+                    color: $standard-blue;
+                    .step {
+                        font-size: 23px;
+                    }
                 }
             }
         }
     }
     .body {
-        margin-left: 231px;
-        padding-bottom: 80px;
         .h2-title {
-            font-size: 23px;
-            margin: 0px 30px;
-            padding: 10px 0px 13px 10px; 
-            border-bottom: 1px solid $standard-gray;
+            font-size: 16px;
+            height: 40px;
+            line-height: 40px;
+            padding-left: 10px;
+            border-bottom: 1px solid $standard-deep-gray;
+            background-color: $standard-gray;
         }
         .fill-form {
-            margin-left: 43px;
-            .form-title {
-                margin-top: 28px;
-                padding-bottom: 8px;
-                font-size: 18px;
-                border-bottom: 1px solid $standard-gray;
-            }
+            padding: 5px 15px;
             .item {
-                margin: 20px 0px 10px 10px;
-                font-size: 13px;
-                p {
-                    display: inline;
-                }
+                font-size: 16px;
+                line-height: 48px;
+                height: 48px;
                 .item-title {
-                    display: inline-block;
-                    width: 130px;
+                    width: 39%;
+                    margin-right: 10px;
                 }
-                input[type=radio], input[type=checkbox] {
-                    margin: 0px 5px 0px 15px;
+                p, a {
+                    font-size: 16px;
+                    display: inline-block;
+                }
+                select {
+                    width: 50%;
                 }
             }
         }
-    }
-    .toolbar {
-        position: absolute;
-        bottom: 0px;
-        margin-top: 50px;
-        height: 50px;
-        width: 100%;
-        background-color: $standard-gray;
-        border-top: 1px solid $standard-deep-gray;
-        line-height: 50px;
-        .btns {
-            float: right;
-            margin-right: 20px;
-            .submit-btn {
-                margin-left: 15px;
-                margin-top: 7px;
-                width: 80px;
+        .fill-form-long {
+            padding: 10px 15px;
+            .item {
+                font-size: 16px;
+                margin: 5px 0px;
+                .item-title {
+                    width: 39%;
+                    margin-right: 10px;
+                }
+                p, a {
+                    font-size: 16px;
+                    display: inline;
+                }
+                select {
+                    width: 50%;
+                }
             }
+        }
+        .btn {
+            margin-top: 10px;
+            width: 89%;
+        }
+    }
+    .success {
+        padding-top: 30px;
+        text-align: center;
+        .title {
+            font-weight: bold;
+            font-size: 25px;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 16px;
+        }
+        .btn {
+            width: 88%;
+            margin: 20px 0px;
         }
     }
 }
