--- a/app/styles/common/_base.scss
+++ b/app/styles/common/_base.scss
@@ -34,7 +34,8 @@ body {
     bottom: 0px;
     font-family: 'Hiragino Sans GB','WenQuanYi Micro Hei','Microsoft YaHei','Helvetica Neue',Helvetica,Arial,sans-serif;
     .wd-view {
-        min-height: 100%;
+        height: 100%;
+        margin-bottom: -24px;
     }
 }
 
@@ -59,12 +60,15 @@ p {
 }
 
 input[type=text], input[type=password] {
-    display: inline-block;
-    padding: 5px 5px;
+    display: block;
+    margin: 5px 0px;
+    width: 88%;
+    padding: 12px 15px;
     border: 1px solid $standard-deep-gray;
-    font-size: 15px;
+    font-size: 18px;
     color: $standard-black;
     vertical-align: baseline;
+    border-radius: 3px;
     &.error {
         @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #ce8483);
         border: 2px solid $standard-red;
@@ -95,11 +99,12 @@ select {
     display: inline-block;
     background-color: $standard-blue;
     color: $standard-white;
+    border-radius: 3px;
     padding: 8px 14px;
     cursor: pointer;
-    line-height: 20px;
-    font-size: 14px;
-    height: 20px;
+    line-height: 26px;
+    font-size: 16px;
+    height: 26px;
     text-align: center;
     vertical-align: top;
     @include transition(opacity, 0.4s);
