--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,21 +6,13 @@
 @import "common/base";
 @import "common/background-image";
 @import "common/loading";
-@import "common/place-holder";
+/*@import "common/place-holder";*/
 @import "common/header";
 @import "common/footer";
-@import "../base/webuploader-0.1.5/webuploader";
+/*@import "../base/webuploader-0.1.5/webuploader";*/
 @import "common/body";
-@import "common/wrapper";
 
 /* others */
-@import "index/index";
-@import "index/download";
 @import "account/register";
 @import "account/login";
 @import "account/open";
-@import "about/nav";
-@import "about/body";
-@import "about/license";
-@import "about/contact";
-@import "my/body";
