--- a/app/views/common/footer.html
+++ b/app/views/common/footer.html
@@ -1,43 +1,3 @@
 <div class="wd-footer">
-    <div class="wd-wrapper">
-        <div class="left">
-            <div class="block">
-                <p class="title">国京证券</p>
-                <a>服务与收费</a>
-                <a>交易工具</a>
-                <a>联系我们</a>
-                <a>免费开户</a>
-            </div>
-            <div class="block">
-                <p class="title">我的账户</p>
-                <a>网上交易</a>
-                <a>账户统计</a>
-                <a>存入资金</a>
-                <a>转入股票</a>
-            </div>
-            <div class="block">
-                <p class="title">条款声明</p>
-                <a>隐私声明</a>
-                <a>服务条款</a>
-                <a>常用链接</a>
-                <a>网站地图</a>
-            </div>
-            <div class="block">
-                <p class="title">关注我们</p>
-                <a>新浪微博</a>
-                <a>微信服务号</a>
-            </div>
-        </div>
-        <div class="right">
-            <p class="title"><i class="icon-phone"></i>400-150-0852</p>
-            <p>客服时间：9:00 - 17:30（北京时间）</p>
-            <a target="_blank" herf="http://chat16.live800.com/live800/chatClient/chatbox.jsp?companyID=290078&configID=51144&jid=9063898172&enterurl=%E5%9B%BD%E4%BA%AC%E8%AF%81%E5%88%B8%E4%B8%8E%E6%9C%9F%E8%B4%A7" class="btn online-btn"><i class="icon-sms"></i>在线咨询</a>
-        </div>
-        <div class="bottom-tips">
-            <p>
-                <span>国京证券为香港证监会认可的持牌法团（<a href="">中央编号：AZT137</a>），提供证券交易服务并受其监管。</span>
-                <span>&copy;2014 富途证券国际(香港)有限公司 版权所有. <a href="">粤ICP备08108712号-2</a></span>
-            </p>
-        </div>
-    </div>
+    <p>&copy;2014 Guoking.com.hk. All rights reserved.</p>
 </div>
