[feature] 补充部分页面。

--- a/app/views/about/contact.html
+++ b/app/views/about/contact.html
@@ -3,7 +3,23 @@
     <div wd-about-nav></div>
     <div class="wd-about-body">
         <p class="h2-title">联系我们</p>
-        <p>公司地址：<a target="_blank" href="http://j.map.baidu.com/obKWx">香港尖沙咀广东道30号新港中心1座17楼05A室</a></p>
+        <a class="contact-btn btn" target="_blank" href="http://chat16.live800.com/live800/chatClient/chatbox.jsp?companyID=290078&configID=51144&jid=9063898172&enterurl=%E5%9B%BD%E4%BA%AC%E8%AF%81%E5%88%B8%E4%B8%8E%E6%9C%9F%E8%B4%A7">
+            <i class="icon-sms"></i>在线咨询
+        </a>
+        <br>
+        <a class="qq-btn" href="tencent://message/?uin=2748698839">
+            <i class="icon-qq"></i>港股咨询
+        </a>
+        <a class="qq-btn" href="tencent://message/?uin=1242879009">
+            <i class="icon-qq"></i>美股咨询
+        </a>
+        <a class="qq-btn" href="tencent://message/?uin=2796275232">
+            <i class="icon-qq"></i>环球期货咨询
+        </a>
+        <a class="qq-btn" href="tencent://message/?uin=2414884831">
+            <i class="icon-qq"></i>市场合作咨询
+        </a>
+        <p class="address">公司地址：<a target="_blank" href="http://j.map.baidu.com/obKWx">香港尖沙咀广东道30号新港中心1座17楼05A室</a></p>
         <div class="map"></div>
         <p>公司电话：00852-21169414</p>
         <p>公司传真：00852-21169415</p>
