--- a/app/views/about/nav.html
+++ b/app/views/about/nav.html
@@ -4,5 +4,6 @@
         <a href="#/about-company">公司简介</a>
         <a href="#/about-license">专业资质</a>
         <a href="#/about-contact">联系我们</a>
+        <a href="#/about-money">收费标准</a>
     </div>
 </div>
