--- a/app/views/common/footer.html
+++ b/app/views/common/footer.html
@@ -3,29 +3,16 @@
         <div class="left">
             <div class="block">
                 <p class="title">国京证券</p>
-                <a>服务与收费</a>
-                <a>交易工具</a>
-                <a>联系我们</a>
-                <a>免费开户</a>
-            </div>
-            <div class="block">
-                <p class="title">我的账户</p>
-                <a>网上交易</a>
-                <a>账户统计</a>
-                <a>存入资金</a>
-                <a>转入股票</a>
+                <a href="#/about-money">服务与收费</a>
+                <a href="#/download">交易工具</a>
+                <a href="#/about-contact">联系我们</a>
+                <a href="#/account-open">免费开户</a>
             </div>
             <div class="block">
                 <p class="title">条款声明</p>
-                <a>隐私声明</a>
-                <a>服务条款</a>
-                <a>常用链接</a>
-                <a>网站地图</a>
-            </div>
-            <div class="block">
-                <p class="title">关注我们</p>
-                <a>新浪微博</a>
-                <a>微信服务号</a>
+                <a target="_blank" href="http://register.guoking.com.hk:8080/WebBusiness/gk_open/pdf/secret.pdf">隐私声明</a>
+                <a target="_blank" href="http://register.guoking.com.hk:8080/WebBusiness/gk_open/pdf/stock_agrement.pdf">证券客户协议书</a>
+                <a target="_blank" href="http://register.guoking.com.hk:8080/WebBusiness/gk_open/pdf/futures_agrement.pdf">期货客户协议书</a>
             </div>
         </div>
         <div class="right">
