--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -7,6 +7,7 @@
                 <div class="icon icon-safe"></div>
                 <p class="title">安全可靠</p>
                 <p>香港证监会认可的持牌法团</p>
+                <a class="link" href="#/about-license"></a>
             </div>
             <div class="block">
                 <div class="icon icon-quality"></div>
@@ -18,11 +19,13 @@
                 <div class="icon icon-cheap"></div>
                 <p class="title">资费低廉</p>
                 <p>无账户管理费，多种免佣金优惠</p>
+                <a class="link" href="#/about-money"></a>
             </div>
             <div class="block">
                 <div class="icon icon-local"></div>
                 <p class="title">本地化服务</p>
-                <p>24X7 小时，本地化服务</p>
+                <p>客服热情，可以直接我们</p>
+                <a class="link" href="#/about-contact"></a>
             </div>
         </div>
     </div>
