--- a/app/styles/about/_body.scss
+++ b/app/styles/about/_body.scss
@@ -6,9 +6,13 @@
         padding-bottom: 5px;
         border-bottom: 3px solid $standard-gray;
         margin-bottom: 20px;
+        margin-top: 10px;
     }
     p {
         margin: 10px 0px;
         font-size: 15px;
+    }
+    table {
+        margin-bottom: 50px;
     }
 }
