--- a/app/styles/about/_contact.scss
+++ b/app/styles/about/_contact.scss
@@ -2,4 +2,27 @@
     .map {
         @include wd-image('location.png');
     }
+    .contact-btn {
+        margin-bottom: 30px;
+        border-radius: 3px;
+        height: 30px;
+        width: 130px;
+        line-height: 30px;
+        .icon-sms {
+            @include wd-image('icon-sms.png');
+            margin-top: -6px;
+            margin-left: -4px;
+        }
+    }
+    .qq-btn {
+        margin-right: 10px;
+        display: inline-block;
+        .icon-qq {
+            margin-bottom: -5px;
+            @include wd-image('icon-qq.png');
+        }
+    }
+    .address {
+        margin-top: 30px;
+    }
 }
