--- a/app/styles/about/_contact.scss
+++ b/app/styles/about/_contact.scss
@@ -1,6 +1,7 @@
 .wd-about-contact {
     .map {
         @include wd-image('location.png');
+        width: 680px;
     }
     .contact-btn {
         margin-bottom: 30px;
