--- a/app/styles/common/_body.scss
+++ b/app/styles/common/_body.scss
@@ -11,4 +11,12 @@
             font-size: 23px;
         }
     }
+    .item {
+        p {
+            display: inline-block;
+            &.title {
+                font-size: 18px;
+            }
+        }
+    }
 }
