--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,7 @@
 @import "../base/webuploader-0.1.5/webuploader";
 @import "common/body";
 @import "common/wrapper";
+@import "common/ng-animation";
 
 /* others */
 @import "index/index";
