--- a/app/views/my/nav.html
+++ b/app/views/my/nav.html
@@ -1,12 +1,11 @@
 <div class="wd-about-nav">
     <div class="title">账户</div>
     <div class="item">
-        <a href="#/my-index">账户首页</a>
-        <a href="#/my-info">账户资料</a>
+        <a href="#/my-index">账户资料</a>
     </div>
     <div class="title">资金</div>
     <div class="item">
         <a href="#/my-money-in">存入资金</a>
-        <a href="#/my-money-in">提取资金</a>
+        <a href="#/my-money-out">提取资金</a>
     </div>
 </div>
