--- a/app/styles/account/_open.scss
+++ b/app/styles/account/_open.scss
@@ -62,6 +62,23 @@
                 }
             }
         }
+        p.error {
+            margin-left: 10px;
+        }
+        .success {
+            padding-top: 30px;
+            text-align: center;
+            .strong {
+                font-size: 30px;
+                margin-bottom: 10px;
+            }
+            p, a {
+                font-size: 18px;
+            }
+            .icon-right {
+                @include wd-image('icon-right.png');
+            }
+        }
     }
     .toolbar {
         position: absolute;
@@ -75,6 +92,9 @@
         .btns {
             float: right;
             margin-right: 20px;
+            .save-success {
+                display: inline;
+            }
             .submit-btn {
                 margin-left: 15px;
                 margin-top: 7px;
