--- a/app/styles/account/_register.scss
+++ b/app/styles/account/_register.scss
@@ -41,7 +41,7 @@
         }
     }
     .register-btn {
-        margin-top: 20px;
+        margin-bottom: 10px;
         margin-left: 155px;
     }
     .ask {
@@ -54,6 +54,9 @@
     .success {
         padding-top: 60px;
         text-align: center;
+        .icon-right {
+            @include wd-image('icon-right.png');
+        }
         .title {
             margin-bottom: 28px;
             font-size: 20px;
