--- a/app/styles/common/_footer.scss
+++ b/app/styles/common/_footer.scss
@@ -45,7 +45,9 @@
         border-top: 1px solid #333;
         position: absolute;
         bottom: 0px;
-        padding: 5px 20px 10px 20px;
+        padding: 5px 0px 10px 0px;
+        width: 100%;
+        text-align: center;
     }
     .online-btn {
         width: 170px;
