--- a/app/styles/common/_header.scss
+++ b/app/styles/common/_header.scss
@@ -12,7 +12,7 @@
         a, span {
             margin: 5px;
         }
-        padding: 2px 35px 0px 35px;
+        padding: 2px 0px 0px 0px;
         .left {
             float: left;
         }
@@ -28,7 +28,7 @@
         }
     }
     .body {
-        padding: 20px 35px;
+        padding: 20px 0px;
         background-color: $standard-black;
         .logo {
             @include wd-image('logo.png');
@@ -43,6 +43,7 @@
             height: 24px;
             line-height: 24px;
             font-size: 18px;
+            cursor: pointer;
             background-color: $standard-light-black;
             &:hover {
                 background-color: $standard-deep-blue;
