--- a/app/styles/my/_body.scss
+++ b/app/styles/my/_body.scss
@@ -11,4 +11,31 @@
         margin: 10px 0px;
         font-size: 15px;
     }
+    .item {
+        margin-bottom: 20px;
+        p.title {
+            width: 130px;
+            font-size: 14px;
+        }
+        .tab {
+            display: inline-block;
+            font-size: 15px;
+            color: #393B3F;
+            height: 36px;
+            line-height: 36px;
+            width: 80px;
+            text-align: center;
+            border: 1px solid $standard-deep-gray;   
+            cursor: pointer;
+            &.active {
+                cursor: default;
+                background-color: #e0f7ff;
+                border: 1px solid $standard-blue;   
+            }
+        }
+        .tab-body {
+            padding: 20px 15px;
+            border: 1px solid $standard-blue;
+        }
+    }
 }
