--- a/app/views/account/login.html
+++ b/app/views/account/login.html
@@ -1,21 +1,24 @@
 <div wd-header></div>
-<div class="wd-account-login">
+<div class="wd-account-login" ng-keyDown="keyDown($event)">
     <div class="wd-wrapper">
         <div class="left">
             <div class="banner"></div>
         </div>
-        <div class="login-form">
+        <div class="login-form" ng-key>
             <div class="item">
                 <p class="title">使用手机号码登录</p>
             </div>
             <div class="item">
-                <input type="text" wd-placeholder="手机号码" ng-model="a">
+                <input ng-class="{error: user.uiPhoneError}" type="text" wd-placeholder="手机号码" ng-model="user.phone">
             </div>
             <div class="item">
-                <input type="password" wd-placeholder="登录密码" ng-model="b">
+                <input ng-class="{error: user.uiPasswordError}" type="password" placeholder="登录密码" ng-model="user.password">
             </div>
             <div class="item">
-                <a class="btn login-btn">登录</a>
+                <p class="error">{{user.uiPhoneError || user.uiPasswordError || user.uiServerError}}</p>
+            </div>
+            <div class="item">
+                <a class="btn login-btn" ng-click="login();">登录</a>
                 <a href="#/account-register" class="btn register-btn">注册</a>
             </div>
             <div class="item">
