--- a/app/views/common/footer.html
+++ b/app/views/common/footer.html
@@ -21,10 +21,8 @@
             <a target="_blank" herf="http://chat16.live800.com/live800/chatClient/chatbox.jsp?companyID=290078&configID=51144&jid=9063898172&enterurl=%E5%9B%BD%E4%BA%AC%E8%AF%81%E5%88%B8%E4%B8%8E%E6%9C%9F%E8%B4%A7" class="btn online-btn"><i class="icon-sms"></i>在线咨询</a>
         </div>
         <div class="bottom-tips">
-            <p>
-                <span>国京证券为香港证监会认可的持牌法团（<a href="">中央编号：AZT137</a>），提供证券交易服务并受其监管。</span>
-                <span>&copy;2014 富途证券国际(香港)有限公司 版权所有. <a href="">粤ICP备08108712号-2</a></span>
-            </p>
+            <p>国京证券为香港证监会认可的持牌法团（<a href="">中央编号：AZT137</a>），提供证券交易服务并受其监管。</p>
+            <p>&copy;2014 国京证券(香港)有限公司 版权所有. <a href="">粤ICP备08108712号-2</a></p>
         </div>
     </div>
 </div>
