--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -5,11 +5,11 @@
                 <span>客服热线：400-150-0852</span>
             </p>
             <p class="right">
-                <a href="#/account-login" class="login-btn">用户登陆</a>
-                <a href="#/account-register">注册</a>
-                <a target="_blank" 
-                href="http://chat16.live800.com/live800/chatClient/chatbox.jsp?companyID=290078&configID=51144&jid=9063898172&enterurl=%E5%9B%BD%E4%BA%AC%E8%AF%81%E5%88%B8%E4%B8%8E%E6%9C%9F%E8%B4%A7">在线咨询</a>
-                <a href="#/account-login" class="btn open-btn">免费开户&nbsp;&gt;</a>
+                <a ng-if="!loading && !isLogin" href="#/account-login" class="login-btn">登录</a>
+                <a ng-if="!loading && !isLogin" href="#/account-register">注册</a>
+                <a ng-if="!loading && isLogin" ng-click="logout()">退出账号</a>
+                <a href="#/about-contact">联系我们</a>
+                <a href="#/account-open" class="btn open-btn">免费开户&nbsp;&gt;</a>
             </p>
         </div>
         <div class="body">
