--- a/app/views/my/index.html
+++ b/app/views/my/index.html
@@ -1,8 +1,21 @@
 <div wd-header></div>
 <div class="wd-my-index wd-body">
-    <div wd-my-nav></div>
-    <div class="wd-my-body">
+    <div ng-if="!loading" wd-my-nav></div>
+    <div ng-if="!loading" class="wd-my-body">
         <p class="h2-title">账户首页</p>
+        <div class="item">
+            <p class="title">手机号码：</p>
+            <p>18210235548</p>
+        </div>
+        <div class="item">
+            <p class="strong">HKD 港币：</p>
+            <p class="strong num">HK$12312</p>
+        </div>
+        <div class="item">
+            <p class="strong">USD 美元：</p>
+            <p class="strong num">$12312</p>
+        </div>
     </div>
+    <div ng-if="loading" wd-loading></div>
 </div>
 <div wd-footer></div>
