--- a/app/styles/about/_body.scss
+++ b/app/styles/about/_body.scss
@@ -15,4 +15,8 @@
     table {
         margin-bottom: 50px;
     }
+    .logo {
+        @include wd-image('logo.png');
+        background-color: $standard-black;
+    }
 }
