--- a/app/styles/index/_download.scss
+++ b/app/styles/index/_download.scss
@@ -81,6 +81,9 @@
             .icon-android {
                 @include wd-image('icon-android.png');
             }
+            .icon-pdf {
+                @include wd-image('icon-pdf.png');
+            }
         }
     }
 }
