--- a/app/views/my/nav.html
+++ b/app/views/my/nav.html
@@ -2,6 +2,7 @@
     <div class="title">账户</div>
     <div class="item">
         <a href="#/my-index">账户资料</a>
+        <a href="#/my-change-password">修改密码</a>
     </div>
     <div class="title">资金</div>
     <div class="item">
