--- a/app/views/index/download.html
+++ b/app/views/index/download.html
@@ -43,7 +43,7 @@
                     <a class="link" target="_blank" href="http://www.guoking.com.hk/n/qhrj/sptrader_guoking_setup_r8483.exe"></a>
                 </div>
                 <div class="block">
-                    <div class="icon icon-win"></div>
+                    <div class="icon icon-pdf"></div>
                     <p class="title">SP 软件使用手册</p>
                     <p>更新日期：2014-03-31</p>
                     <div class="btn">下载</div>
